Fixed multiple issues in data entry table, some filters were not showing, was allowing uploading files w same name, has the source missing, etc.

--- a/src/app/data-entry/new-data-entry/new-data-entry.component.scss
+++ b/src/app/data-entry/new-data-entry/new-data-entry.component.scss
@@ -4,7 +4,6 @@
 
     .data-entry-selection-container {
         max-width: 750px;
-        max-height: 500px;
         margin: auto;
     }
 }
